# rust-opengl

./: Cargo.toml
resources/: f_particle.glsl  fragment.glsl  v_particle.glsl  vertex.glsl
src/: application.rs  camera.rs  entity.rs  key.rs  main.rs  mesh.rs  renderer.rs  scene.rs  shader.rs  swarm.rs  transform.rs
src/mesh/: index_buffer.rs  vertex_buffer.rs
src/renderer/: index_buffer.rs  mesh.rs  shader.rs  vertex_array.rs  vertex_buffer.rs
src/swarm/: agent.rs  message.rs
