[package]
name = "rust-opengl"
version = "0.1.0"
edition = "2021"
authors = ["Abdulmelik Bekmez"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.29.1"
gl = "*"
glam = "0.21.3"
# tokio = {version = "1" , features = ["full"]}
